// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation.addChat creates a new chat between current user and specified recipient 1`] = `
Object {
  "addChat": Object {
    "id": "5",
    "name": "Bryan Wallace",
    "participants": Array [
      Object {
        "id": "2",
      },
      Object {
        "id": "3",
      },
    ],
  },
}
`;

exports[`Mutation.addChat creates a new chat between current user and specified recipient 2`] = `
Object {
  "chat": Object {
    "id": "5",
    "name": "Bryan Wallace",
    "participants": Array [
      Object {
        "id": "2",
      },
      Object {
        "id": "3",
      },
    ],
  },
}
`;

exports[`Mutation.addChat returns the existing chat if so 1`] = `
Object {
  "addChat": Object {
    "id": "1",
    "name": "Ethan Gonzalez",
    "participants": Array [
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
    ],
  },
}
`;
